tests/fail/invalid_name2.stderr
error: expected any of `frequency`, `rate`, `len`, `repeats`, `skip`
 --> tests/fail/invalid_name2.rs:9:28
  |
9 |     let _wave = sine_wave!(invalid: 10, rate: 10000);
  |                            ^^^^^^^
